--- a/main/index-style.css
+++ b/main/index-style.css
@@ -24,7 +24,7 @@ button {
   width: 100px;
   height: 100px;
   box-shadow: inset 0 0 0 2px #000000;
-  background-color: #FFFFFF;
+  background-color: #FFFFFB;
   color: #000000;
   font-size: 15px;
   font-weight: 700;
