--- a/main/index-style.css
+++ b/main/index-style.css
@@ -18,6 +18,12 @@ p {
   font: 300 30px/1.5 Lato, sans-serif;
 }
 
+a {
+  color: #000000;
+  text-align: center;
+  font: 300 30px/1.5 Lato, sans-serif;
+  }
+
 button {
   border: 0;
   margin: 1em;
